remove bootstrap.css and add normalize.css

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  	<link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-1.11.1.js"></script>
     <script src="js/scripts.js"></script>
     <title>Next Weekday</title>
   </head>
   <body>
-  </body>
+  	<div id="container">
+			<h1>Next Weekday</h1>
+			<p>This is an easy way to find dates by knowing a weekday and a month</p>
+
+			<h2>Next Occurrence</h2>
+			<p>Find the next occurrence of a weekday</p>
+			<input type="text" placeholder="Type a weekday">
+			<button type="button">Get the date</button>
+
+			<h2>Dates in a month</h2>
+			<p>Find all the dates of a weekday in the given month</p>
+			<input type="text" placeholder="Type a weekday">
+			<input type="text" placeholder="Type a month">
+			<button type="button">Get the dates</button>
+		</div>
 </html>
