add the structure of HTML

--- a/index.html
+++ b/index.html
@@ -11,16 +11,27 @@
   	<div id="container">
 			<h1>Next Weekday</h1>
 			<p>This is an easy way to find dates by knowing a weekday and a month</p>
-
-			<h2>Next Occurrence</h2>
-			<p>Find the next occurrence of a weekday</p>
-			<input type="text" placeholder="Type a weekday">
-			<button type="button">Get the date</button>
-
-			<h2>Dates in a month</h2>
-			<p>Find all the dates of a weekday in the given month</p>
-			<input type="text" placeholder="Type a weekday">
-			<input type="text" placeholder="Type a month">
-			<button type="button">Get the dates</button>
+			
+			<div id="next-occurrence">
+				<h2>Next Occurrence</h2>
+				<p>Find the next occurrence of a weekday</p>
+				<input type="text" placeholder="Type a weekday">
+				<button type="button">Get the date</button>
+			</div>
+			<div id="added-next-occurrence">
+				<p></p>
+			</div>
+			
+			<div id="dates-in-month">
+				<h2>Dates in a month</h2>
+				<p>Find all the dates of a weekday in the given month</p>
+				<input type="text" placeholder="Type a weekday">
+				<input type="text" placeholder="Type a month">
+				<button type="button">Get the dates</button>
+			</div>
+			<div id="added-dates-in-month">
+				<p></p>
+			</div>
+		
 		</div>
 </html>
