--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 			<div id="next-occurrence">
 				<h2>Next Occurrence</h2>
 				<p>Find the next occurrence of a weekday</p>
-				<input type="text" placeholder="Type a weekday">
-				<button type="button">Get the date</button>
+				<input id="next-weekday" type="text" placeholder="Type a weekday">
+				<button type="button" id="get-next-occurrence">Get the date</button>
 			</div>
 			<div id="added-next-occurrence">
 				<p></p>
@@ -25,9 +25,9 @@
 			<div id="dates-in-month">
 				<h2>Dates in a month</h2>
 				<p>Find all the dates of a weekday in the given month</p>
-				<input type="text" placeholder="Type a weekday">
-				<input type="text" placeholder="Type a month">
-				<button type="button">Get the dates</button>
+				<input type="text" placeholder="Type a weekday" id="weekday">
+				<input type="text" placeholder="Type a month" id="month">
+				<button type="button" id="get-dates-in-month">Get the dates</button>
 			</div>
 			<div id="added-dates-in-month">
 				<p></p>
